@@ -57,7 +57,7 @@ APP_AUTHOR			:=	TimmSkiller & MyPasswordIsWeak
 ARCH	:=	-march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft
 
 CFLAGS	:= -pedantic -Wall -Wextra -mword-relocations -DUSE_SETTINGS_H \
-			-fcompare-debug-second -ffunction-sections $(ARCH) -DV02 \
+			-fcompare-debug-second -ffunction-sections $(ARCH) \
 
 CFLAGS	+=	$(INCLUDE) -DARM11 -D_3DS
 
@@ -202,7 +202,6 @@ _build_all:
 
 cia: $(INT_ALL)
 	@$(MAKE) --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile
-	$(SILENTCMD) $(PREFIX)strip -s "$(OUTPUT).elf"
 	$(SILENTCMD) 3dstool -ctf romfs $(CIA_PREFIX)/romfs.bin --romfs-dir romfs
 	$(SILENTCMD) makerom -f cia -o $(TARGET).cia -target t -elf $(TARGET).elf -icon $(CIA_PREFIX)/icon.smdh -banner $(CIA_PREFIX)/banner.bnr -rsf $(CIA_PREFIX)/$(TARGET).rsf -romfs $(CIA_PREFIX)/romfs.bin -ver $(VERSION)
 	$(SILENTMSG) built ... $(TARGET).cia
