@@ -11,9 +11,6 @@
 
 namespace ui
 {
-	void setup_meta(hs::Index *index);
-	hs::Index *get_index();
-
 	class TitleMeta : public ui::Widget
 	{
 	public:
