@@ -22,10 +22,12 @@ void show_find_missing()
 
 	std::vector<u64> installed;
 	panic_if_err_3ds(list_titles_on(MEDIATYPE_SD, installed));
+	list_titles_on(MEDIATYPE_GAME_CARD, installed); // it might error if there is no cart inserted so we don't want to panic if it fails
 
 	std::vector<u64> installedGames;
 	std::copy_if(installed.begin(), installed.end(), std::back_inserter(installedGames), [](u64 tid) -> bool {
-		return ((tid >> 32) & 0xFFFF) /* category */ == 0x0000 /* normal */;
+		u16 category = (tid >> 32) & 0xFFFF;
+		return category == 0x0000 /* normal */ || category == 0x8000 /* DSiWare/TWL */;
 	});
 
 	hs::BatchRelated related = hs::batch_related(installedGames);
@@ -39,7 +41,7 @@ void show_find_missing()
 
 	std::vector<hs::Title> newInstalls;
 	std::copy_if(potentialInstalls.begin(), potentialInstalls.end(), std::back_inserter(newInstalls), [installed](const hs::Title& title) -> bool {
-		// TODO: also check the version int
+		// TODO: also check the version int, wait for backend update to return version int for that
 		return std::find(installed.begin(), installed.end(), str_to_tid(title.tid)) != installed.end();
 	});
 
