@@ -38,11 +38,7 @@ void show_more()
 {
 	enter_exit();
 
-#ifdef V02
 	constexpr size_t maxIndex = 4;
-#else
-	constexpr size_t maxIndex = 3;
-#endif
 	size_t index = 0;
 
 	ui::Button *buttons[maxIndex];
@@ -52,9 +48,7 @@ void show_more()
 	ui::Button *find_missing = new ui::Button(STRING(find_missing_content), Y1, X1(FIND_MISSING_I),
 		Y2, X2(FIND_MISSING_I));
 	ui::Button *help = new ui::Button(STRING(help_manual), Y1, X1(HELP_I), Y2, X2(HELP_I));
-#ifdef V02
 	ui::Button *hlink = new ui::Button("hLink", Y1, X1(HLINK_I), Y2, X2(HLINK_I));
-#endif
 
 	// Setup buttons
 	about->highlight();
@@ -83,29 +77,23 @@ void show_more()
 		return ui::Results::end_early;
 	});
 
-#ifdef V02
 	hlink->set_on_click([&index, &buttons](bool inFrame) -> ui::Results {
 		if(inFrame) ui::end_frame();
 		set_hi(&index, buttons, HELP_I); show_hlink();
 		return ui::Results::end_early;
 	});
-#endif
 
 	// Setup indices
 	buttons[ABOUT_I]        = about;
 	buttons[FIND_MISSING_I] = find_missing;
 	buttons[HELP_I]         = help;
-#ifdef V02
 	buttons[HLINK_I]        = hlink;
-#endif
 
 	ui::Widgets wids;
 	wids.push_back(about, ui::Scr::bottom);
 	wids.push_back(find_missing, ui::Scr::bottom);
 	wids.push_back(help, ui::Scr::bottom);
-#ifdef V02
 	wids.push_back(hlink, ui::Scr::bottom);
-#endif
 
 	ui::Keys keys;
 	while(ui::framenext(keys))
